added social icons

--- a/index.html
+++ b/index.html
@@ -30,23 +30,35 @@
 					<button type="button" class="btn btn-success btn-lg">Buy Now!</button>
 				</div>
 			</div>
-			<div class="row" id="youtube-video">
-				<div class="col-md-4 col-md-offset-1">
-					
+			<div class="row">
+				<div class="col-md-6" id="social">
+					<h2>Share the API Superstore with your friends!</h2><br>
+					<a href="#buy-now">
+						<img src="assets/social-icons/Facebook.png" alt="Facebook logo" title="Share us on Facebook!">
+					</a>
+					<a href="#buy-now">
+						<img src="assets/social-icons/Twitter.png" alt="Twitter logo" title="Share us on Twitter!">
+					</a>
+					<a href="#buy-now">
+						<img src="assets/social-icons/Google.png" alt="Google logo" title="Share us on Google!">
+					</a>
+					<a href="#buy-now">
+						<img src="assets/social-icons/Flickr.png" alt="Flickr logo" title="Share us on Flickr!">
+					</a>
 				</div>
-				<div class="col-md-6 col-md-offset-6">
+				<div class="col-md-6" id="youtube-video">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo?rel=0" allowfullscreen></iframe>
 				</div>
 			</div>
 			<div class="row" id="product-description">
 				<div class="col-md-5">
-					<h2 class="text-center">Product Description</h2>
+					<h2>Product Description</h2>
 					<p class="text-justify">The API Superstore provides a catalog of third-party API's that you can use to enhance your business.  From e-commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache of sorting it out yourself!  The longer you wait, the longer you're not making more money and happier users!</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-md-offset-6" id="features">
-					<h3> Features</h3>
+					<h2> Features</h2>
 					<ul>
 						<li>Links to the best API's from all over the web</li>
 						<li>Pay with credit, check, IOU, wire transfer, PayPal, or livestock trade!</li>
@@ -57,7 +69,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6" id="testimonials">
-					<h3> Testimonials</h3>
+					<h2> Testimonials</h2>
 					<blockquote>
 						<p>This is the best website ever!</p>
 						<footer>C.P. Yu, AmazingSite.com</footer>
