--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <body>
 		<header class="container" id="header">
         	<div class="row">
-        		<div class="col-md-4"><img src="assets/logos/api_superstore_sqlogo_ry.png" alt="API Superstore logo"></div>
-				<div class="col-md-8"><h1> Click, click, code!</h1></div>
+        		<div class="col-md-4 col-md-offset-1"><img src="assets/logos/api_superstore_sqlogo_by.png" alt="API Superstore logo"></div>
 			</div>
 		</header>
 		<div class="container">
@@ -99,7 +98,7 @@
 			</div>
 			<div class="row" id="contact-info">
 				<div class="col-md-3">
-					<img src="assets/logos/api_superstore_logo_ry.png" alt="API Superstore logo">
+					<img src="assets/logos/api_superstore_logo_by.png" alt="API Superstore logo">
 				</div>
 				<div class="col-md-3">
 					<p><strong>Phone:</strong> (206)555-1234</p>
