--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     </head>
     <body>
 		<header class="container" id="header">
+			<div class="dropcloth">&nbsp;</div>
         	<div class="row">
-        		<div class="col-md-4 col-md-offset-1"><img src="assets/logos/api_superstore_sqlogo_by.png" alt="API Superstore logo"></div>
+        		<div class="col-md-4"><img src="assets/logos/api_superstore_sqlogo_by.png" alt="API Superstore logo"></div>
+				<div class=""
 			</div>
 		</header>
 		<div class="container">
