--- a/index.html
+++ b/index.html
@@ -18,37 +18,105 @@
 
     </head>
     <body>
-		<header class="container-fluid" id="header">
-        	<div class="row">
-        		<div class="col-md-4"><img id="api-logo" src="assets/logos/api_superstore_sqlogo_by.png" alt="API Superstore logo"></div>
-				<div class="col-md-3 col-md-offset-5" id="social">
-					<a href="#buy-now">
-						<img src="assets/social-icons/Facebook.png" alt="Facebook logo" title="Share us on Facebook!">
-					</a>
-					<a href="#buy-now">
-						<img src="assets/social-icons/Twitter.png" alt="Twitter logo" title="Share us on Twitter!">
-					</a>
-					<a href="#buy-now">
-						<img src="assets/social-icons/Google.png" alt="Google logo" title="Share us on Google!">
-					</a>
-					<a href="#buy-now">
-						<img src="assets/social-icons/Flickr.png" alt="Flickr logo" title="Share us on Flickr!">
-					</a>
+		<nav class="navbar navbar-inverse">
+  			<div class="container-fluid">
+    			<div class="header">
+					<h1><a href="."><span class="sr-only">API Superstore</span></a></h1>
+					<ul class="nav navbar-pills pull-right">
+						<li>
+							<form class="navbar-form navbar-right" role="email">
+							<span class="glyphicon glyphicon-envelope"></span>
+							<div class="form-group">
+    							<input type="text" class="form-control" placeholder="Join our mailing list!">
+  							</div>
+  							<button type="submit" class="btn btn-default">Submit</button>
+							</form>
+						</li>
+					</ul>
+    			</div>
+  			</div>
+		</nav>
+		<header class="container-fluid">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  				<!-- Indicators -->
+  				<ol class="carousel-indicators">
+    				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  				</ol>
+
+  				<!-- Wrapper for slides -->
+  				<div class="carousel-inner" role="listbox">
+    				<div class="item active">
+      					<img src="assets/misc/surf.jpg" alt="...">
+      					<div class="carousel-caption">
+							<h2>Click, click, code!</h2>
+      					</div>
+    				</div>
+    				<div class="item">
+      					<img src="assets/misc/surf.jpg" alt="...">
+      					<div class="carousel-caption">
+							<h2>API slogan #2</h2>
+      					</div>
+    				</div>
+					<div class="item">
+						<img src="assets/misc/surf.jpg" alt="">
+						<div class="carousel-caption">
+							<h2>API slogan #3</h2>
+						</div>
+					</div>
 				</div>
+
+  				<!-- Controls -->
+  				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    				<span class="sr-only">Previous</span>
+  				</a>
+  				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    				<span class="sr-only">Next</span>
+  				</a>
 			</div>
 		</header>
 		<div class="container-fluid" id="main-body">
-			<div class="row" id="description-video">
+			<div class="row" id="steps">
+				<div class="col-md-2 col-md-offset-3" id="step-1">
+					<span class="glyphicon glyphicon-film"></span>
+					<h4>Step One:<br>
+						Watch video
+					</h4>
+				</div>
+				<div class="col-md-2" id="step-2">
+					<span class="glyphicon glyphicon-piggy-bank"></span>
+					<h4>Step Two:<br>
+						Ponder your future
+					</h4>
+				</div>
+				<div class="col-md-2" id="step-3">
+					<span class="glyphicon glyphicon-thumbs-up"></span>
+					<h4>Step Three:<br>
+						Sign up for API Superstore!
+					</h4>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3" id="youtube-video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo?rel=0" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4" id="buy-now">
+					<button type="button" class="btn btn-primary btn-lg active"> Buy Now!</button>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-5" id="product-description">
 					<h2>Product Description</h2>
 					<p class="text-justify">The API Superstore provides a catalog of third-party API's that you can use to enhance your business.  From e-commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache of sorting it out yourself!  The longer you wait, the longer you're not making more money and happier users!</p>
 				</div>
-				<div class="col-md-6 col-md-offset-1" id="youtube-video">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo?rel=0" autoplay=1 allowfullscreen></iframe>
-				</div>
 			</div>
-			<div class="row" id="carousel-features">
-				<div class="col-md-6 col-md-offset-6" id="features">
+			<div class="row">
+				<div class="col-md-6" id="features">
 					<h2> Features</h2>
 					<ul>
 						<li>Links to the best API's from all over the web</li>
@@ -58,7 +126,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row" id="steps-testimonials">
+			<div class="row">
 				<div class="col-md-6" id="testimonials">
 					<h2> Testimonials</h2>
 					<blockquote>
@@ -69,11 +137,6 @@
 						<p>Once again, I'm blown away by the amazing offerings of the API Superstore.  You really are SUPER!</p>
 						<footer>Clara Cache</footer>
 					</blockquote>
-				</div>
-			</div>
-			<div class="row" id="call-action">
-				<div class="col-md-4 col-md-offset-4" id="buy-now">
-					<button type="button" class="btn btn-primary btn-lg active">Want to save time, and/or money? Buy Now!</button>
 				</div>
 			</div>
 			<footer class="container-fluid" id="footer">
@@ -98,7 +161,7 @@
 				</div>
 			</footer>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="assets/bootstrap/bootstrap.min.js"></script>
 	</body>
 </html>
