--- a/index.html
+++ b/index.html
@@ -18,22 +18,18 @@
 
     </head>
     <body>
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-inverse" role="navigation">
   			<div class="container-fluid">
-    			<div class="header">
-					<h1><a href="."><span class="sr-only">API Superstore</span></a></h1>
-					<ul class="nav navbar-pills pull-right">
-						<li>
-							<form class="navbar-form navbar-right" role="email">
-							<span class="glyphicon glyphicon-envelope"></span>
-							<div class="form-group">
-    							<input type="text" class="form-control" placeholder="Join our mailing list!">
-  							</div>
-  							<button type="submit" class="btn btn-default">Submit</button>
-							</form>
-						</li>
-					</ul>
-    			</div>
+    			<div class="navbar-header">
+					<h1><a href="#"><span class="sr-only">API Superstore</span></a></h1>
+				</div>
+				<form class="navbar-form navbar-right" role="search">
+					<span class="glyphicon glyphicon-envelope"></span>
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Join our mailing list">
+					</div>
+					<button type="submit" class="btn btn-default">Submit</button>
+				</form>
   			</div>
 		</nav>
 		<header class="container-fluid">
@@ -81,22 +77,16 @@
 		<div class="container-fluid" id="main-body">
 			<div class="row" id="steps">
 				<div class="col-md-2 col-md-offset-3" id="step-1">
-					<span class="glyphicon glyphicon-film"></span>
-					<h4>Step One:<br>
-						Watch video
-					</h4>
+					<h4><span class="glyphicon glyphicon-film"></span> Step One:</h4>
+					<p>Watch video</p>
 				</div>
 				<div class="col-md-2" id="step-2">
-					<span class="glyphicon glyphicon-piggy-bank"></span>
-					<h4>Step Two:<br>
-						Ponder your future
-					</h4>
+					<h4><span class="glyphicon glyphicon-piggy-bank"></span> Step Two:</h4>
+					<p>Ponder your future</p>
 				</div>
 				<div class="col-md-2" id="step-3">
-					<span class="glyphicon glyphicon-thumbs-up"></span>
-					<h4>Step Three:<br>
-						Sign up for API Superstore!
-					</h4>
+					<h4><span class="glyphicon glyphicon-thumbs-up"></span> Step Three:</h4>
+					<p>Sign up for API Superstore!</p>
 				</div>
 			</div>
 			<div class="row">
@@ -116,7 +106,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6" id="features">
+				<div class="col-md-6 col-md-offset-6" id="features">
 					<h2> Features</h2>
 					<ul>
 						<li>Links to the best API's from all over the web</li>
