updated footer styling

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     				<div class="item">
       					<img src="assets/misc/surf.jpg" alt="...">
       					<div class="carousel-caption">
-							<h2>API slogan #2</h2>
+							<h2>Signup and save!</h2>
       					</div>
     				</div>
 					<div class="item">
 						<img src="assets/misc/surf.jpg" alt="">
 						<div class="carousel-caption">
-							<h2>API slogan #3</h2>
+							<h2>All the API's, all the time!</h2>
 						</div>
 					</div>
 				</div>
@@ -129,23 +129,14 @@
 					</blockquote>
 				</div>
 			</div>
-			<footer class="container-fluid" id="footer">
+			<footer class="container-fluid" id="contact-info">
 				<div class="row">
-					<div class="col-md-12">
-						<h3 class="text-center">Contact Us</h3>
-					</div>
-				</div>
-				<div class="row" id="contact-info">
 					<div class="col-md-3">
 						<img src="assets/logos/api_superstore_logo_by.png" alt="API Superstore logo">
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-6">
 						<p><strong>Phone:</strong> (206)555-1234</p>
-					</div>
-					<div class="col-md-3">
 						<p><strong>E-mail:</strong> info@apisuperstore.com</p>
-					</div>
-					<div class="col-md-3">
 						<p><strong>Location:</strong> Seattle, WA</p>
 					</div>
 				</div>
