--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Product page for the API Superstore.">
         <title>API Superstore</title>
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+		<link href='http://fonts.googleapis.com/css?family=Permanent+Marker|Pacifico|Rock+Salt' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-theme.css">
 		<link rel="stylesheet" href="main.css">
 
@@ -17,60 +19,71 @@
 
     </head>
     <body>
-		<nav class="navbar navbar-inverse" role="navigation">
-  			<div class="container-fluid">
+		<nav class="navbar navbar-inverse" id="navbar" role="navigation">
+			<div class="container-fluid">
     			<div class="navbar-header">
 					<h1><a href="#"><span class="sr-only">API Superstore</span></a></h1>
 				</div>
-				<form class="navbar-form navbar-right" role="search">
-					<span class="glyphicon glyphicon-envelope"></span>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Join our mailing list">
-					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
-				</form>
-  			</div>
+				<div class="navbar-left">
+					<ul class="nav navbar-nav">
+						<li><a href="#navbar">Home</a></li>
+						<li><a href="#steps">Video</a></li>
+						<li><a href="#product-description">Product Description</a></li>
+						<li><a href="#features">Features</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+						<li><a href="#contact-info">Contact</a></li>
+					</ul>
+				</div>
+				<ul class="nav navbar-nav navbar-right" id="social-links">
+					<li><a href="http://facebook.com" title="Share us on Facebook!"><i class="fa fa-facebook fa-2x"></i></a></li>
+					<li><a href="http://twitter.com" title="Share us on Twitter!"><i class="fa fa-twitter fa-2x"></i></a></li>
+					<li><a href="http://google.com" title="Share us on Google!"><i class="fa fa-google-plus fa-2x"></i></a></li>
+					<li><a href="http://linkedin.com" title="Share us on LinkedIn!"><i class="fa fa-linkedin fa-2x"></i></a></li>
+				</ul>
+			</div>
 		</nav>
-		<header class="container-fluid">
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  				<!-- Indicators -->
-  				<ol class="carousel-indicators">
-    				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  				</ol>
+		<header>
+			<div class="container-fluid">
+				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+					</ol>
 
-  				<!-- Wrapper for slides -->
-  				<div class="carousel-inner" role="listbox">
-    				<div class="item active">
-      					<img src="assets/misc/surf.jpg" alt="...">
-      					<div class="carousel-caption">
-							<h2>Click, click, code!</h2>
-      					</div>
-    				</div>
-    				<div class="item">
-      					<img src="assets/misc/surf.jpg" alt="...">
-      					<div class="carousel-caption">
-							<h2>Signup and save!</h2>
-      					</div>
-    				</div>
-					<div class="item">
-						<img src="assets/misc/surf.jpg" alt="">
-						<div class="carousel-caption">
-							<h2>All the API's, all the time!</h2>
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<img src="assets/misc/surf.jpg" alt="...">
+							<div class="carousel-caption">
+								<h2>Click, click, code!</h2>
+							</div>
+						</div>
+						<div class="item">
+							<img src="assets/misc/surf.jpg" alt="...">
+							<div class="carousel-caption">
+								<h2>Signup and save!</h2>
+							</div>
+						</div>
+						<div class="item">
+							<img src="assets/misc/surf.jpg" alt="">
+							<div class="carousel-caption">
+								<h2>All the API's, all the time!</h2>
+							</div>
 						</div>
 					</div>
-				</div>
 
-  				<!-- Controls -->
-  				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    				<span class="sr-only">Previous</span>
-  				</a>
-  				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    				<span class="sr-only">Next</span>
-  				</a>
+					<!-- Controls -->
+					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
 			</div>
 		</header>
 		<div class="container-fluid" id="main-body">
@@ -98,14 +111,16 @@
 					<button type="button" class="btn btn-primary btn-lg active"> Buy Now!</button>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-5" id="product-description">
+			<div class="row" id="product-description">
+				<div class="dropcloth">&nbsp;</div>
+				<div class="col-md-5">
 					<h2>Product Description</h2>
 					<p class="text-justify">The API Superstore provides a catalog of third-party API's that you can use to enhance your business.  From e-commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache of sorting it out yourself!  The longer you wait, the longer you're not making more money and happier users!</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6 col-md-offset-6" id="features">
+			<div class="row" id="features">
+				<div class="dropcloth">&nbsp;</div>
+				<div class="col-md-6 col-md-offset-6">
 					<h2> Features</h2>
 					<ul>
 						<li>Links to the best API's from all over the web</li>
@@ -115,8 +130,9 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6" id="testimonials">
+			<div class="row" id="testimonials">
+				<div class="dropcloth">&nbsp;</div>
+				<div class="col-md-6">
 					<h2> Testimonials</h2>
 					<blockquote>
 						<p>This is the best website ever!</p>
@@ -128,19 +144,21 @@
 					</blockquote>
 				</div>
 			</div>
-			<footer class="container-fluid" id="contact-info">
+		</div>
+		<footer id="contact-info">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-3">
 						<img src="assets/logos/api_superstore_logo_by.png" alt="API Superstore logo">
 					</div>
-					<div class="col-md-6">
-						<p><strong>Phone:</strong> (206)555-1234</p>
-						<p><strong>E-mail:</strong> info@apisuperstore.com</p>
-						<p><strong>Location:</strong> Seattle, WA</p>
+					<div class="col-md-9">
+						<p class="pull-right"><strong>Phone:</strong> (206) 555-1234</p>
+						<p class="pull-right"><strong>E-mail:</strong> info@apisuperstore.com</p>
+						<p class="pull-right"><strong>Location:</strong> Seattle, WA</p>
 					</div>
 				</div>
-			</footer>
-		</div>
+			</div>
+		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="assets/bootstrap/bootstrap.min.js"></script>
 	</body>
