--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     </head>
     <body>
-		<nav class="navbar navbar-inverse" id="navbar" role="navigation">
+		<nav class="navbar navbar-inverse navbar-static-top" id="navbar" role="navigation">
 			<div class="container-fluid">
     			<div class="navbar-header">
-					<h1><a href="#"><span class="sr-only">API Superstore</span></a></h1>
+					<a href="#navbar"><img src="assets/logos/api_superstore_logo_by.png" id="logo" alt="API Logo"></a>
 				</div>
 				<div class="navbar-left">
 					<ul class="nav navbar-nav">
-						<li><a href="#navbar">Home</a></li>
+						<li class="active"><a href="#navbar">Home</a></li>
 						<li><a href="#steps">Video</a></li>
 						<li><a href="#product-description">Product Description</a></li>
 						<li><a href="#features">Features</a></li>
@@ -35,62 +35,60 @@
 					</ul>
 				</div>
 				<ul class="nav navbar-nav navbar-right" id="social-links">
-					<li><a href="http://facebook.com" title="Share us on Facebook!"><i class="fa fa-facebook fa-2x"></i></a></li>
-					<li><a href="http://twitter.com" title="Share us on Twitter!"><i class="fa fa-twitter fa-2x"></i></a></li>
-					<li><a href="http://google.com" title="Share us on Google!"><i class="fa fa-google-plus fa-2x"></i></a></li>
-					<li><a href="http://linkedin.com" title="Share us on LinkedIn!"><i class="fa fa-linkedin fa-2x"></i></a></li>
+					<li><a href="http://facebook.com" title="Share us on Facebook!"><i class="fa fa-facebook-official fa-2x" id="facebook"></i></a></li>
+					<li><a href="http://twitter.com" title="Share us on Twitter!"><i class="fa fa-twitter-square fa-2x" id="twitter"></i></a></li>
+					<li><a href="http://google.com" title="Share us on Google!"><i class="fa fa-google-plus-square fa-2x" id="google"></i></a></li>
+					<li><a href="http://linkedin.com" title="Share us on LinkedIn!"><i class="fa fa-linkedin-square fa-2x" id="linkedin"></i></a></li>
 				</ul>
 			</div>
 		</nav>
 		<header>
-			<div class="container-fluid">
-				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-					</ol>
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+					<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				</ol>
 
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner" role="listbox">
-						<div class="item active">
-							<img src="assets/misc/surf.jpg" alt="...">
-							<div class="carousel-caption">
-								<h2>Click, click, code!</h2>
-							</div>
-						</div>
-						<div class="item">
-							<img src="assets/misc/surf.jpg" alt="...">
-							<div class="carousel-caption">
-								<h2>Signup and save!</h2>
-							</div>
-						</div>
-						<div class="item">
-							<img src="assets/misc/surf.jpg" alt="">
-							<div class="carousel-caption">
-								<h2>All the API's, all the time!</h2>
-							</div>
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<img src="assets/misc/workspace-office.jpg" alt="...">
+						<div class="carousel-caption">
+							<h2>Click, click, code!</h2>
 						</div>
 					</div>
-
-					<!-- Controls -->
-					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+					<div class="item">
+						<img src="assets/misc/workspace-adobe.jpg" alt="...">
+						<div class="carousel-caption">
+							<h2>All the APIs, all the time!</h2>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/misc/workspace-bright.jpg" alt="">
+						<div class="carousel-caption">
+							<h2>Signup and save!</h2>
+						</div>
+					</div>
 				</div>
+
+				<!-- Controls -->
+				<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
 		</header>
 		<div class="container-fluid" id="main-body">
 			<div class="row" id="steps">
 				<div class="col-md-2 col-md-offset-3" id="step-1">
 					<h4><span class="glyphicon glyphicon-film"></span> Step One:</h4>
-					<p>Watch video</p>
+					<p>Watch our promo video below</p>
 				</div>
 				<div class="col-md-2" id="step-2">
 					<h4><span class="glyphicon glyphicon-piggy-bank"></span> Step Two:</h4>
@@ -98,7 +96,7 @@
 				</div>
 				<div class="col-md-2" id="step-3">
 					<h4><span class="glyphicon glyphicon-thumbs-up"></span> Step Three:</h4>
-					<p>Sign up for API Superstore!</p>
+					<p>Sign up for the API Superstore!</p>
 				</div>
 			</div>
 			<div class="row">
@@ -108,12 +106,13 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4" id="buy-now">
-					<button type="button" class="btn btn-primary btn-lg active"> Buy Now!</button>
+					<button type="button" class="btn btn-default btn-lg active" title="Sign up today"><span class="glyphicon glyphicon-pencil"></span> Sign Up</button>
+					<button type="button" class="btn btn-default btn-lg active" title="Browse our extensive catalog of API libraries"><span class="glyphicon glyphicon-book"></span> Browse Our Library</button>
 				</div>
 			</div>
 			<div class="row" id="product-description">
 				<div class="dropcloth">&nbsp;</div>
-				<div class="col-md-5">
+				<div class="col-md-6">
 					<h2>Product Description</h2>
 					<p class="text-justify">The API Superstore provides a catalog of third-party API's that you can use to enhance your business.  From e-commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache of sorting it out yourself!  The longer you wait, the longer you're not making more money and happier users!</p>
 				</div>
@@ -122,11 +121,11 @@
 				<div class="dropcloth">&nbsp;</div>
 				<div class="col-md-6 col-md-offset-6">
 					<h2> Features</h2>
-					<ul>
-						<li>Links to the best API's from all over the web</li>
-						<li>Pay with credit, check, IOU, wire transfer, PayPal, or livestock trade!</li>
-						<li>Convenient catalog</li>
-						<li>Elegant shopping experience</li>
+					<ul class="fa-ul">
+						<li><i class="fa-li fa fa-spinner"></i>Links to the best API's from all over the web</li>
+						<li><i class="fa-li fa fa-spinner"></i>Pay with credit, check, IOU, wire transfer, PayPal, or livestock trade!</li>
+						<li><i class="fa-li fa fa-spinner"></i>Convenient catalog</li>
+						<li><i class="fa-li fa fa-spinner"></i>Elegant shopping experience</li>
 					</ul>
 				</div>
 			</div>
