--- a/index.html
+++ b/index.html
@@ -86,47 +86,39 @@
 		</header>
 		<div class="container-fluid" id="main-body">
 			<div class="row" id="steps">
-				<div class="col-md-2 col-md-offset-3" id="step-1">
+				<div class="col-md-3 col-md-offset-1" id="step-1">
 					<h4><span class="glyphicon glyphicon-film"></span> Step One:</h4>
-					<p>Watch our promo video below</p>
+					<p>Watch our promo video below.</p>
 				</div>
-				<div class="col-md-2" id="step-2">
+				<div class="col-md-3" id="step-2">
 					<h4><span class="glyphicon glyphicon-piggy-bank"></span> Step Two:</h4>
-					<p>Ponder your future</p>
+					<p>Think about it...</p>
 				</div>
-				<div class="col-md-2" id="step-3">
+				<div class="col-md-3" id="step-3">
 					<h4><span class="glyphicon glyphicon-thumbs-up"></span> Step Three:</h4>
 					<p>Sign up for the API Superstore!</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3" id="youtube-video">
+				<div class="col-md-6" id="youtube-video">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo?rel=0" allowfullscreen></iframe>
+					<button type="button" class="btn btn-default btn-lg active" title="Don't delay, sign up today!"><span class="glyphicon glyphicon-pencil"></span> Sign Up</button>
+					<button type="button" class="btn btn-default btn-lg active" title="Browse our extensive selection of API libraries"><span class="glyphicon glyphicon-book"></span> Browse Our Library</button>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4" id="buy-now">
-					<button type="button" class="btn btn-default btn-lg active" title="Sign up today"><span class="glyphicon glyphicon-pencil"></span> Sign Up</button>
-					<button type="button" class="btn btn-default btn-lg active" title="Browse our extensive catalog of API libraries"><span class="glyphicon glyphicon-book"></span> Browse Our Library</button>
+				<div class="col-md-5" id="features">
+					<h2> Features</h2>
+					<ul class="list-group">
+						<li class="list-group-item"><i class="fa fa-external-link-square fa-fw"></i>&nbsp; Links to the best API's from all over the web</li>
+						<li class="list-group-item"><i class="fa fa-usd fa-fw"></i>&nbsp; Pay with credit, check, IOU, wire transfer, PayPal, or livestock trade!</li>
+						<li class="list-group-item"><i class="fa fa-book fa-fw"></i>&nbsp; Convenient catalog</li>
+						<li class="list-group-item"><i class="fa fa-shopping-cart fa-fw"></i>&nbsp; Elegant shopping experience</li>
+					</ul>
 				</div>
 			</div>
 			<div class="row" id="product-description">
 				<div class="dropcloth">&nbsp;</div>
-				<div class="col-md-6">
-					<h2>Product Description</h2>
-					<p class="text-justify">The API Superstore provides a catalog of third-party API's that you can use to enhance your business.  From e-commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache of sorting it out yourself!  The longer you wait, the longer you're not making more money and happier users!</p>
-				</div>
-			</div>
-			<div class="row" id="features">
-				<div class="dropcloth">&nbsp;</div>
-				<div class="col-md-6 col-md-offset-6">
-					<h2> Features</h2>
-					<ul class="fa-ul">
-						<li><i class="fa-li fa fa-spinner"></i>Links to the best API's from all over the web</li>
-						<li><i class="fa-li fa fa-spinner"></i>Pay with credit, check, IOU, wire transfer, PayPal, or livestock trade!</li>
-						<li><i class="fa-li fa fa-spinner"></i>Convenient catalog</li>
-						<li><i class="fa-li fa fa-spinner"></i>Elegant shopping experience</li>
-					</ul>
+				<div class="col-md-12">
+					<p>The API Superstore has partnered with API providers across the Web to bring you easy access to the hottest third­party services and features. Get started today!</p>
 				</div>
 			</div>
 			<div class="row" id="testimonials">
