--- a/index.html
+++ b/index.html
@@ -122,14 +122,23 @@
 				</div>
 			</div>
 			<div class="row" id="testimonials">
-				<div class="dropcloth">&nbsp;</div>
-				<div class="col-md-6">
-					<h2> Testimonials</h2>
+				<div class="col-md-4">
 					<blockquote>
+						<img src="assets/misc/happy-asian-man.jpg" class="img-circle">
 						<p>This is the best website ever!</p>
 						<footer>C.P. Yu, AmazingSite.com</footer>
 					</blockquote>
+				</div>
+				<div class="col-md-4">
 					<blockquote>
+						<img src="assets/misc/happy-large-woman.jpg" class="img-circle">
+						<p>I have really admired the way the API Superstore team has created a truly divine interface for browsing all that information that’s out there online for free. For a low monthly fee, I’m able to more easily keep up with the churn of information that makes application development so difficult, and API Superstore makes my world so much happier! Please don’t stop the rocking!</p>
+						<footer>Amy Zon, Mega Fan</footer>
+					</blockquote>
+				</div>
+				<div class="col-md-4">
+					<blockquote>
+						<img src="assets/misc/happy-woman.jpg" class="img-circle">
 						<p>Once again, I'm blown away by the amazing offerings of the API Superstore.  You really are SUPER!</p>
 						<footer>Clara Cache</footer>
 					</blockquote>
