footer almost completed

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					<blockquote>
 						<img src="assets/misc/happy-woman.jpg" class="img-circle">
 						<p>Once again, I'm blown away by the amazing offerings of the API Superstore.  You really are SUPER!</p>
-						<footer>Clara Cache</footer>
+						<footer>Clara Cache, Cash Money Records</footer>
 					</blockquote>
 				</div>
 			</div>
@@ -181,16 +181,36 @@
 				</div>
 			</div>
 		</div>
-		<footer id="contact-info">
+		<footer id="footer">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-3">
-						<img src="assets/logos/api_superstore_logo_by.png" alt="API Superstore logo">
+					<div class="col-md-3" id="contact-info">
+						<h5>Contact</h5>
+						<ul>
+							<li><i class="fa fa-phone"></i> +47 278 991 25</li>
+							<li><i class="fa fa-envelope-o"></i> info@apisuperstore.com</li>
+							<li><i class="fa fa-user"></i> CEO: Stig Inge Henriksen</li>
+						</ul>
 					</div>
-					<div class="col-md-9">
-						<p class="pull-right"><strong>Phone:</strong> (206) 555-1234</p>
-						<p class="pull-right"><strong>E-mail:</strong> info@apisuperstore.com</p>
-						<p class="pull-right"><strong>Location:</strong> Seattle, WA</p>
+					<div class="col-md-3" id="about">
+						<h5>About</h5>
+						<ul>
+							<li>Careers</li>
+							<li>Affiliates</li>
+							<li>Corporate Wellness</li>
+						</ul>
+					</div>
+					<div class="col-md-3" id="copyright">
+						<h6><i class="fa fa-copyright"></i> 2015 API Superstore Inc. All Rights Reserved</h6>
+						<ul>
+							<li>Privacy Policy</li>
+							<li>Terms of Use</li>
+							<li>Help</li>
+						</ul>
+					</div>
+					<div class="col-md-3 pull-right" id="address">
+						<img src="assets/logos/api_superstore_sqlogo_by.png">
+						<p>123 Valhalla Dr<br>Trondheim, Norway</p>
 					</div>
 				</div>
 			</div>
