rough draft complete

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="assets/misc/api-thing.jpg">
+						<img src="assets/misc/code-blue.jpg">
 						<div class="caption">
 							<h3>How are APIs used?</h3>
 							<p>You might assume that the technology world is inherently cut-throat, with incumbents not wishing to provide a leg-up to the competition. But you’d be wrong. Indeed, many large technology firms, such as Twitter, LinkedIn and Facebook, even allow the use of their service by third parties and competitors.</p>
@@ -170,7 +170,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="assets/misc/api-thing.jpg">
+						<img src="assets/misc/touchscreen.jpg">
 						<div class="caption">
 							<h3>Why should I use APIs?</h3>
 							<p>The HTML5 specification has defined what the modern browsing experience should look like – fast, interactive, and with the least plugins possible. Although support for the standard is nowhere near completed, and remains wildly inconsistent across browsers, there’s still an amazing amount of functionality on offer.</p>
@@ -201,7 +201,7 @@
 						</ul>
 					</div>
 					<div class="col-md-3" id="copyright">
-						<h6><i class="fa fa-copyright"></i> 2015 API Superstore Inc. All Rights Reserved</h6>
+						<h5><i class="fa fa-copyright"></i> 2015 API Superstore Inc. All Rights Reserved</h5>
 						<ul>
 							<li>Privacy Policy</li>
 							<li>Terms of Use</li>
@@ -210,7 +210,7 @@
 					</div>
 					<div class="col-md-3 pull-right" id="address">
 						<img src="assets/logos/api_superstore_sqlogo_by.png">
-						<p>123 Valhalla Dr<br>Trondheim, Norway</p>
+						<p>Klaebuviein 125<br>Trondheim, Norway<br>36-39</p>
 					</div>
 				</div>
 			</div>
