fixed nav links

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
     			<div class="navbar-header">
 					<a href="#navbar"><img src="assets/logos/api_superstore_logo_by.png" id="logo" alt="API Logo"></a>
 				</div>
-				<div class="navbar-left">
+				<div class="navbar-left" id="navigation">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#navbar">Home</a></li>
 						<li><a href="#steps">Video</a></li>
-						<li><a href="#product-description">Product Description</a></li>
-						<li><a href="#features">Features</a></li>
 						<li><a href="#testimonials">Testimonials</a></li>
 						<li><a href="#contact-info">Contact</a></li>
 					</ul>
